<resources>
    <string name="app_name">PiggyBank</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_deposit_withdraw">DepositWithdrawActivity</string>
    <string name="main_title">PIGGY BANK</string>
    <string name="balance_text">$0.00</string>
    <string name="main_button_text">Do Something!</string>
    <string name="withdraw_btn">WITHDRAW</string>
    <string name="deposit_btn">DEPOSIT</string>
    <string name="undo_btn">UNDO</string>
    <string name="confirm_btn">CONFIRM</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="success_deposit">Deposit Success!</string>
    <string name="success_withdraw">Withdraw Success!</string>
    <string name="withdrawLessThan0">Can\'t Trick Me: Cannot undo anymore!</string>
</resources>
