<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gradyxiao.piggybank.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#ADD9E6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:id="@+id/mainActivityTitle"
        android:textSize="46sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/piggyPink"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_text"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:textSize="60sp"
        android:layout_below="@+id/mainActivityTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:background="#64B3DF"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:src="@drawable/piggy"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_text"
        android:id="@+id/button"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/mainActivityTitle"
        android:layout_alignEnd="@+id/mainActivityTitle"
        android:layout_alignLeft="@+id/mainActivityTitle"
        android:layout_alignStart="@+id/mainActivityTitle"
        android:background="@color/piggyPink"
        android:textSize="24sp" />

</RelativeLayout>
