<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gradyxiao.piggybank.DepositWithdrawActivity"
    tools:showIn="@layout/activity_deposit_withdraw"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:id="@+id/textView2"
        android:textSize="46sp"
        android:textColor="@color/piggyPink"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_text"
        android:id="@+id/textView3"
        android:layout_marginTop="30dp"
        android:textSize="60sp"
        android:textAlignment="center"
        android:background="@color/darkBlueBackground"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/linearLayout">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id="@+id/imageButton"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:src="@drawable/onecent"
            android:scaleType="fitCenter"
            android:background="@color/background" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id="@+id/imageButton2"
            android:src="@drawable/fivecent"
            android:scaleType="fitCenter"
            android:background="@color/background"
            android:layout_alignTop="@+id/imageButton"
            android:layout_toRightOf="@+id/imageButton"
            android:layout_toEndOf="@+id/imageButton"
            android:layout_marginLeft="5dp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id="@+id/imageButton3"
            android:src="@drawable/tencent"
            android:scaleType="fitCenter"
            android:background="@color/background"
            android:layout_alignBottom="@+id/imageButton2"
            android:layout_toRightOf="@+id/imageButton2"
            android:layout_toEndOf="@+id/imageButton2"
            android:layout_marginLeft="5dp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id="@+id/imageButton4"
            android:src="@drawable/twentyfivecent"
            android:scaleType="fitCenter"
            android:background="@color/background"
            android:layout_alignBottom="@+id/imageButton3"
            android:layout_toRightOf="@+id/imageButton3"
            android:layout_toEndOf="@+id/imageButton3"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="10dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/imageButton5"
            android:src="@drawable/dollarone"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/imageButton6"
            android:src="@drawable/dollarfive"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="-20dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/imageButton7"
            android:src="@drawable/dollarten"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/imageButton8"
            android:src="@drawable/dollartwenty"
            android:background="@color/background"
            android:scaleType="fitCenter"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/deposit_btn"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:background="@color/moneyGreen" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/undo_btn"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:background="@color/darkBlueBackground" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_btn"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:background="@color/piggyPink" />
    </LinearLayout>

</RelativeLayout>
